fix: ajustando core